added profile to display on search

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://bootswatch.com/4/superhero/bootstrap.min.css"
+      href="https://bootswatch.com/4/slate/bootstrap.min.css"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
 
@@ -19,7 +19,7 @@
     </nav>
     <div class="container searchContainer">
       <div class="search card card-body">
-        <h1>Search <i class="fab fa-github"></i> GitHub Users</h1>
+        <h1><i class="fab fa-github"></i> Search GitHub Users</h1>
         <p class="lead">Enter a username to fetch a user profile and repos</p>
         <input
           type="text"
@@ -30,8 +30,13 @@
         />
       </div>
       <br />
-      <div id="profile"></div>
+      <div id="profile">
+
+      </div>
+
     </div>
+
+
     <footer class="mt-5 p-3 text-center bg-dark">
       GitHub Finder &copy;
     </footer>
